fix jump link in nav

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -216,7 +216,8 @@ hr.small {
 #projects {
     padding: 50px 0;
     border: 1em rgb(49,45,85);
-    background-color:  rgb(49,45,85);
+    background-color: rgb(213,219,224);
+
 }
 
 #pouptube-jpg {
